# Tobii_Linux

./: .gitignore  Cargo.toml  README.md
assets/: 99-tobii.rules
crates/tobii-cli/: Cargo.toml
crates/tobii-cli/src/: main.rs
crates/tobii-config/: Cargo.toml
crates/tobii-config/src/: curve.rs  edid.rs  lib.rs  setup.rs  store.rs
crates/tobii-gtk/: Cargo.toml
crates/tobii-gtk/src/: align.rs  calibrate_flow.rs  device.rs  eyeview.rs  fine_tune.rs  lib.rs  main.rs  overlay.rs  setup_flow.rs  widget.rs
crates/tobii-gui/: Cargo.toml
crates/tobii-gui/src/: device.rs  eyeview.rs  hub.rs  lib.rs  main.rs  widget.rs
crates/tobii-gui/src/flows/: display_setup.rs  eye_position.rs  mod.rs
crates/tobii-headpose/: Cargo.toml
crates/tobii-headpose/src/: filter.rs  lib.rs  model.rs  opentrack.rs  preprocess.rs
crates/tobii-protocol/: Cargo.toml  README.md
crates/tobii-protocol/src/: bytes.rs  calibration.rs  camera.rs  commands.rs  display.rs  error.rs  frame.rs  gaze.rs  handshake.rs  lib.rs  md5.rs  parser.rs  realm.rs  tlv.rs
crates/tobii-recap/: Cargo.toml
crates/tobii-recap/src/: catalog.rs  decode.rs  error.rs  lib.rs  main.rs  opnames.rs  out_parser.rs  pcap.rs  usbmon.rs
crates/tobii-recap/tests/: integration.rs
crates/tobii-usb/: Cargo.toml
crates/tobii-usb/src/: connection.rs  lib.rs  transport.rs
docs/: session-handoff-windows-vm.md  windows-extract-tobii-headpose-model.md  windows-headpose-findings.md  windows-headpose-integration-map.md
docs/TobiiSetupProcess/calibration/: README.md  calibration.setpm  displayinfo.setpm  screenplane.setpm
docs/superpowers/plans/: 2026-06-14-tobii-handshake.md  2026-06-14-tobii-protocol-core.md  2026-06-14-tobii-usb-stream.md  2026-07-14-tobii-config.md  2026-07-19-tobii-calibration-edid-backend.md  2026-07-19-tobii-gui-b2-foundation.md  2026-07-19-tobii-gui-b2.2-flows.md  2026-07-20-b3-calibration-flow.md  2026-07-24-official-parity-calibration-flow-phase1.md
docs/superpowers/specs/: 2026-07-19-tobii-gui-b2-design.md  (+6 more)
docs/wiki/: Calibration.md  Display-Area.md  Encoding.md  Gaze-Stream.md  Handshake.md  Head-Pose.md  Home.md  Op-Catalog.md  Reverse-Engineering-Methodology.md  Select-Eyes.md  Streams.md  TTP-Framing.md  Tools.md  USB-Transport.md
(+2 files in other folders)
