[workspace]
resolver = "2"
members = ["crates/tobii-protocol", "crates/tobii-usb", "crates/tobii-cli", "crates/tobii-config", "crates/tobii-gtk", "crates/tobii-headpose", "crates/tobii-recap"]

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
authors = ["Fabian Plaimauer"]
repository = ""
