[package]
name = "tobii-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Command-line interface for the Tobii ET5 Linux runtime."

[[bin]]
name = "tobii"
path = "src/main.rs"

[dependencies]
tobii-usb = { path = "../tobii-usb" }
tobii-protocol = { path = "../tobii-protocol" }
tobii-config = { path = "../tobii-config" }
tobii-headpose = { path = "../tobii-headpose" }
