[package]
name = "tobii-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Graphical config hub for the Tobii ET5 Linux runtime (egui/eframe)."

[lib]
name = "tobii_gui"
path = "src/lib.rs"

[[bin]]
name = "tobii-gui"
path = "src/main.rs"

[dependencies]
tobii-protocol = { path = "../tobii-protocol" }
tobii-usb = { path = "../tobii-usb" }
tobii-config = { path = "../tobii-config" }
eframe = "0.28"
