[package]
name = "tobii-recap"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Decode a usbmon pcap capture of the Tobii ET5 into a TTP op catalog."

[lib]
name = "tobii_recap"
path = "src/lib.rs"

[[bin]]
name = "tobii-recap"
path = "src/main.rs"

[dependencies]
tobii-protocol = { path = "../tobii-protocol" }
